@@ -733,9 +733,10 @@ Argument name      | Corresponding PureCN argument | PureCN function
 `--intervals`      | `interval.file`  | `correctCoverageBias` 
 `--method`         | `method`  | `correctCoverageBias`
 `--keep-duplicates` | `keep.duplicates`  | `calculateBamCoverageByInterval`
-`--remove-mapq0`    | `mapqFilter`  | `ScanBamParam`
-`--skip-gc-norm`     | | `correctCoverageBias`
-`--out-dir`         | | 
+`--chunks`         | `chunks`  | `calculateBamCoverageByInterval`
+`--remove-mapq0`   | `mapqFilter`  | `ScanBamParam`
+`--skip-gc-norm`   | | `correctCoverageBias`
+`--out-dir`        | | 
 `--cores`          | | Number of CPUs to use when multiple BAMs are provided 
 `--parallel`       | | Use default `r Biocpkg("BiocParallel")` backend when multiple BAMs are provided 
 `--seed`           | | 
